--- a/index.html
+++ b/index.html
@@ -11,124 +11,124 @@
 
     <table id="game-board">
         <tr>
-            <td data-x="0" data-y="0"></td>
-            <td data-x="0" data-y="1"></td>
-            <td data-x="0" data-y="2"></td>
-            <td data-x="0" data-y="3"></td>
-            <td data-x="0" data-y="4"></td>
-            <td data-x="0" data-y="5"></td>
-            <td data-x="0" data-y="6"></td>
-            <td data-x="0" data-y="7"></td>
-            <td data-x="0" data-y="8"></td>
-            <td data-x="0" data-y="9"></td>
+            <td data-y="0" data-x="0"></td>
+            <td data-y="0" data-x="1"></td>
+            <td data-y="0" data-x="2"></td>
+            <td data-y="0" data-x="3"></td>
+            <td data-y="0" data-x="4"></td>
+            <td data-y="0" data-x="5"></td>
+            <td data-y="0" data-x="6"></td>
+            <td data-y="0" data-x="7"></td>
+            <td data-y="0" data-x="8"></td>
+            <td data-y="0" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="1" data-y="0"></td>
-            <td data-x="1" data-y="1"></td>
-            <td data-x="1" data-y="2"></td>
-            <td data-x="1" data-y="3"></td>
-            <td data-x="1" data-y="4"></td>
-            <td data-x="1" data-y="5"></td>
-            <td data-x="1" data-y="6"></td>
-            <td data-x="1" data-y="7"></td>
-            <td data-x="1" data-y="8"></td>
-            <td data-x="1" data-y="9"></td>
+            <td data-y="1" data-x="0"></td>
+            <td data-y="1" data-x="1"></td>
+            <td data-y="1" data-x="2"></td>
+            <td data-y="1" data-x="3"></td>
+            <td data-y="1" data-x="4"></td>
+            <td data-y="1" data-x="5"></td>
+            <td data-y="1" data-x="6"></td>
+            <td data-y="1" data-x="7"></td>
+            <td data-y="1" data-x="8"></td>
+            <td data-y="1" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="2" data-y="0"></td>
-            <td data-x="2" data-y="1"></td>
-            <td data-x="2" data-y="2"></td>
-            <td data-x="2" data-y="3"></td>
-            <td data-x="2" data-y="4"></td>
-            <td data-x="2" data-y="5"></td>
-            <td data-x="2" data-y="6"></td>
-            <td data-x="2" data-y="7"></td>
-            <td data-x="2" data-y="8"></td>
-            <td data-x="2" data-y="9"></td>
+            <td data-y="2" data-x="0"></td>
+            <td data-y="2" data-x="1"></td>
+            <td data-y="2" data-x="2"></td>
+            <td data-y="2" data-x="3"></td>
+            <td data-y="2" data-x="4"></td>
+            <td data-y="2" data-x="5"></td>
+            <td data-y="2" data-x="6"></td>
+            <td data-y="2" data-x="7"></td>
+            <td data-y="2" data-x="8"></td>
+            <td data-y="2" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="3" data-y="0"></td>
-            <td data-x="3" data-y="1"></td>
-            <td data-x="3" data-y="2"></td>
-            <td data-x="3" data-y="3"></td>
-            <td data-x="3" data-y="4"></td>
-            <td data-x="3" data-y="5"></td>
-            <td data-x="3" data-y="6"></td>
-            <td data-x="3" data-y="7"></td>
-            <td data-x="3" data-y="8"></td>
-            <td data-x="3" data-y="9"></td>
+            <td data-y="3" data-x="0"></td>
+            <td data-y="3" data-x="1"></td>
+            <td data-y="3" data-x="2"></td>
+            <td data-y="3" data-x="3"></td>
+            <td data-y="3" data-x="4"></td>
+            <td data-y="3" data-x="5"></td>
+            <td data-y="3" data-x="6"></td>
+            <td data-y="3" data-x="7"></td>
+            <td data-y="3" data-x="8"></td>
+            <td data-y="3" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="4" data-y="0"></td>
-            <td data-x="4" data-y="1"></td>
-            <td data-x="4" data-y="2"></td>
-            <td data-x="4" data-y="3"></td>
-            <td data-x="4" data-y="4"></td>
-            <td data-x="4" data-y="5"></td>
-            <td data-x="4" data-y="6"></td>
-            <td data-x="4" data-y="7"></td>
-            <td data-x="4" data-y="8"></td>
-            <td data-x="4" data-y="9"></td>
+            <td data-y="4" data-x="0"></td>
+            <td data-y="4" data-x="1"></td>
+            <td data-y="4" data-x="2"></td>
+            <td data-y="4" data-x="3"></td>
+            <td data-y="4" data-x="4"></td>
+            <td data-y="4" data-x="5"></td>
+            <td data-y="4" data-x="6"></td>
+            <td data-y="4" data-x="7"></td>
+            <td data-y="4" data-x="8"></td>
+            <td data-y="4" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="5" data-y="0"></td>
-            <td data-x="5" data-y="1"></td>
-            <td data-x="5" data-y="2"></td>
-            <td data-x="5" data-y="3"></td>
-            <td data-x="5" data-y="4"></td>
-            <td data-x="5" data-y="5"></td>
-            <td data-x="5" data-y="6"></td>
-            <td data-x="5" data-y="7"></td>
-            <td data-x="5" data-y="8"></td>
-            <td data-x="5" data-y="9"></td>
+            <td data-y="5" data-x="0"></td>
+            <td data-y="5" data-x="1"></td>
+            <td data-y="5" data-x="2"></td>
+            <td data-y="5" data-x="3"></td>
+            <td data-y="5" data-x="4"></td>
+            <td data-y="5" data-x="5"></td>
+            <td data-y="5" data-x="6"></td>
+            <td data-y="5" data-x="7"></td>
+            <td data-y="5" data-x="8"></td>
+            <td data-y="5" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="6" data-y="0"></td>
-            <td data-x="6" data-y="1"></td>
-            <td data-x="6" data-y="2"></td>
-            <td data-x="6" data-y="3"></td>
-            <td data-x="6" data-y="4"></td>
-            <td data-x="6" data-y="5"></td>
-            <td data-x="6" data-y="6"></td>
-            <td data-x="6" data-y="7"></td>
-            <td data-x="6" data-y="8"></td>
-            <td data-x="6" data-y="9"></td>
+            <td data-y="6" data-x="0"></td>
+            <td data-y="6" data-x="1"></td>
+            <td data-y="6" data-x="2"></td>
+            <td data-y="6" data-x="3"></td>
+            <td data-y="6" data-x="4"></td>
+            <td data-y="6" data-x="5"></td>
+            <td data-y="6" data-x="6"></td>
+            <td data-y="6" data-x="7"></td>
+            <td data-y="6" data-x="8"></td>
+            <td data-y="6" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="7" data-y="0"></td>
-            <td data-x="7" data-y="1"></td>
-            <td data-x="7" data-y="2"></td>
-            <td data-x="7" data-y="3"></td>
-            <td data-x="7" data-y="4"></td>
-            <td data-x="7" data-y="5"></td>
-            <td data-x="7" data-y="6"></td>
-            <td data-x="7" data-y="7"></td>
-            <td data-x="7" data-y="8"></td>
-            <td data-x="7" data-y="9"></td>
+            <td data-y="7" data-x="0"></td>
+            <td data-y="7" data-x="1"></td>
+            <td data-y="7" data-x="2"></td>
+            <td data-y="7" data-x="3"></td>
+            <td data-y="7" data-x="4"></td>
+            <td data-y="7" data-x="5"></td>
+            <td data-y="7" data-x="6"></td>
+            <td data-y="7" data-x="7"></td>
+            <td data-y="7" data-x="8"></td>
+            <td data-y="7" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="8" data-y="0"></td>
-            <td data-x="8" data-y="1"></td>
-            <td data-x="8" data-y="2"></td>
-            <td data-x="8" data-y="3"></td>
-            <td data-x="8" data-y="4"></td>
-            <td data-x="8" data-y="5"></td>
-            <td data-x="8" data-y="6"></td>
-            <td data-x="8" data-y="7"></td>
-            <td data-x="8" data-y="8"></td>
-            <td data-x="8" data-y="9"></td>
+            <td data-y="8" data-x="0"></td>
+            <td data-y="8" data-x="1"></td>
+            <td data-y="8" data-x="2"></td>
+            <td data-y="8" data-x="3"></td>
+            <td data-y="8" data-x="4"></td>
+            <td data-y="8" data-x="5"></td>
+            <td data-y="8" data-x="6"></td>
+            <td data-y="8" data-x="7"></td>
+            <td data-y="8" data-x="8"></td>
+            <td data-y="8" data-x="9"></td>
         </tr>
         <tr>
-            <td data-x="9" data-y="0"></td>
-            <td data-x="9" data-y="1"></td>
-            <td data-x="9" data-y="2"></td>
-            <td data-x="9" data-y="3"></td>
-            <td data-x="9" data-y="4"></td>
-            <td data-x="9" data-y="5"></td>
-            <td data-x="9" data-y="6"></td>
-            <td data-x="9" data-y="7"></td>
-            <td data-x="9" data-y="8"></td>
-            <td data-x="9" data-y="9"></td>
+            <td data-y="9" data-x="0"></td>
+            <td data-y="9" data-x="1"></td>
+            <td data-y="9" data-x="2"></td>
+            <td data-y="9" data-x="3"></td>
+            <td data-y="9" data-x="4"></td>
+            <td data-y="9" data-x="5"></td>
+            <td data-y="9" data-x="6"></td>
+            <td data-y="9" data-x="7"></td>
+            <td data-y="9" data-x="8"></td>
+            <td data-y="9" data-x="9"></td>
         </tr>
     </table>
 
